--- a/carerooms-api/src/main/resources/application.properties
+++ b/carerooms-api/src/main/resources/application.properties
@@ -46,4 +46,6 @@ authentication.oauth.test.grantTypes=password,refresh_token
 # Application
 # -----------
 app.storage.avatarBucket=dev-carerooms-avatar
+app.storage.propertyDocumentBucket=dev-carerooms-propertydocument
+app.storage.trainingDocumentBucket=dev-carerooms-trainingdocument
 app.storage.awsProfile=carerooms
