Change email settings

--- a/carerooms-api/src/main/resources/application.properties
+++ b/carerooms-api/src/main/resources/application.properties
@@ -49,3 +49,14 @@ app.storage.avatarBucket=dev-carerooms-avatar
 app.storage.propertyDocumentBucket=dev-carerooms-propertydocument
 app.storage.trainingDocumentBucket=dev-carerooms-trainingdocument
 app.storage.awsProfile=carerooms
+
+# Mail Properties
+# -----------------
+spring.mail.protocol=smtp
+spring.mail.host=email-smtp.eu-west-1.amazonaws.com
+spring.mail.port=25
+spring.mail.username=AKIAJCYI3HS4O7LUTQ6A
+spring.mail.password=AjGYb4A1bqyRqElU343VRbBYkQgoKx0hT+VW4vf/Tp2c
+spring.mail.properties.mail.smtp.ssl.trust=email-smtp.eu-west-1.amazonaws.com
+app.email.sender=hello@allivia.com
+app.email.subjectApplicationStatus=Application Status Change
